<resources>
    <string name="app_name">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="Mobile">Mobile</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share_contact"> [Name] %1$s \n[Mobile] %2$s \n[Email] %3$s</string>
    <string name="delete_contact"> Delete %1$s:</string>
    <string name="delete_this_contact"> Delete contact:</string>
    <string name="contact_sharing_massage">Contact sharing Message</string>
    <string name="edit_contact">Edit Contact:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="share_contact_as">Share contact as</string>
    <string name="file">File</string>
    <string name="text">Text</string>
    <string name="search">Search</string>
    <string name="icon_for_person">icon for person</string>
    <string name="name_prefix">Name prefix</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="name_suffix">Name suffix</string>
    <string name="icon_for_name_subsections">icon for name subsections</string>
    <string name="icon_for_call_number">icon for call number</string>
    <string name="icon_for_email">icon for email</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="contact_image_in_recycler_view">contact image in recycler view.</string>
    <string name="insert_contact">insert contact</string>
    <string name="contact_icon">contact icon</string>
    <string name="telephone_type">telephone type</string>
</resources>