<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_select_all"
        android:title="@string/select_all"
        android:icon="@drawable/ic_check_circle"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_unSelectAll"
        android:icon="@drawable/ic_unchecked"
        android:title="@string/unselect_all"
        app:showAsAction="ifRoom|withText" />
</menu>