<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_contact_as"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tv_file_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/file"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="20sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tv_text_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="20sp"
            android:typeface="serif" />

    </LinearLayout>
</layout>
