<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.CreateNewContactFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_horizontal_bottom"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.75" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_horizontal_middle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.7" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_horizontal_top"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.1" />

                <Button
                    android:id="@+id/btn_save"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_cancel"
                    app:layout_constraintTop_toBottomOf="@id/gl_horizontal_bottom"
                    android:text="@string/save"
                    tools:layout_editor_absoluteX="230dp" />

                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_save"
                    app:layout_constraintTop_toBottomOf="@id/gl_horizontal_bottom"
                    android:text="@string/cancel"
                    tools:layout_editor_absoluteX="8dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toTopOf="@id/gl_horizontal_middle"
                    app:layout_constraintTop_toBottomOf="@id/gl_horizontal_top"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    tools:layout_editor_absoluteY="106dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cardView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/gl_left_vertical"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.04" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/gl_card_horizontal_top"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.15" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/gl_card_horizontal_bottom"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.70" />


                        <ImageView
                            android:id="@+id/image_view_person"
                            android:layout_width="0dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="28dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_person"
                            app:layout_constraintDimensionRatio="W,25:34"
                            app:layout_constraintStart_toStartOf="@id/gl_left_vertical"
                            app:layout_constraintTop_toBottomOf="@id/gl_card_horizontal_top" />

                        <EditText
                            android:id="@+id/contact_name"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:hint="@string/name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            app:layout_constraintBottom_toBottomOf="@+id/image_view_person"
                            app:layout_constraintStart_toEndOf="@+id/image_view_person"
                            app:layout_constraintTop_toTopOf="@id/image_view_person"
                            app:layout_constraintVertical_bias="0.0"
                            tools:ignore="MissingConstraints" />

                        <ImageView
                            android:id="@+id/image_view_call"
                            android:layout_width="0dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="40dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_call"
                            app:layout_constraintDimensionRatio="W,25:34"
                            app:layout_constraintStart_toStartOf="@id/gl_left_vertical"
                            app:layout_constraintTop_toBottomOf="@id/image_view_person"
                            app:layout_constraintVertical_bias="0.0" />

                        <EditText
                            android:id="@+id/contact_number"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="16dp"
                            android:hint="@string/Mobile"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            app:layout_constraintBottom_toBottomOf="@+id/image_view_call"
                            app:layout_constraintTop_toTopOf="@id/image_view_call"
                            app:layout_constraintStart_toEndOf="@+id/image_view_call"
                            tools:ignore="MissingConstraints" />

                        <ImageView
                            android:id="@+id/image_view_email"
                            android:layout_width="0dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="40dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_email"
                            app:layout_constraintDimensionRatio="W,25:34"
                            app:layout_constraintBottom_toTopOf="@id/gl_card_horizontal_bottom"
                            app:layout_constraintStart_toStartOf="@id/gl_left_vertical"
                            app:layout_constraintTop_toBottomOf="@id/image_view_call"
                            app:layout_constraintVertical_bias="0.0" />

                        <EditText
                            android:id="@+id/contact_email"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="16dp"
                            android:hint="@string/email_address"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            app:layout_constraintBottom_toBottomOf="@+id/image_view_email"
                            app:layout_constraintStart_toEndOf="@+id/image_view_email"
                            app:layout_constraintTop_toTopOf="@id/image_view_email"
                            tools:ignore="MissingConstraints" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>